--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Exercícios java/Netbeans Projects/exercicio7/target/
 /Exercícios java/Netbeans Projects/exercicio8/target/
 /Exercícios java/Netbeans Projects/exercicio9/target/
+/NetBeansProjects/Notebook/build/
+/NetBeansProjects/Notebook/nbproject/private/
