--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /Exercícios java/Netbeans Projects/exercicio9/target/
 /NetBeansProjects/Notebook/build/
 /NetBeansProjects/Notebook/nbproject/private/
+/NetBeansProjects/NumeroComplexo/nbproject/private/
+/NetBeansProjects/ProjetoCofre/nbproject/private/
+/NetBeansProjects/ProjetoCofre/build/
+/NetBeansProjects/AplicacaoTAD/nbproject/private/
