--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /NetBeansProjects/ProjetoCofre/nbproject/private/
 /NetBeansProjects/ProjetoCofre/build/
 /NetBeansProjects/AplicacaoTAD/nbproject/private/
+/NetBeansProjects/Escalonador/nbproject/private/
