--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 /NetBeansProjects/ProjetoCofre/build/
 /NetBeansProjects/AplicacaoTAD/nbproject/private/
 /NetBeansProjects/Escalonador/nbproject/private/
+/NetBeansProjects/Teste/nbproject/private/
+/NetBeansProjects/Teste/build/
+/NetBeansProjects/UpperComputersNT/nbproject/private/
+/NetBeansProjects/UpperComputers/nbproject/private/
+/NetBeansProjects/UpperComputers/build/
